fix-z-index

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 
 /* Navbar */
 .navbar {
+  z-index: 1;
   display: flex;
   background-color: #3c3a39;
   color: white;
@@ -58,7 +59,6 @@
 
 .navbar__opt {
   display: flex;
-  z-index: 999;
   position: fixed;
   flex-direction: column;
   align-items: flex-start;
